# credit_card_rewards

./: README.md  main.py  pyproject.toml  todo
backend/: gemini_analyzer.py
crawler/: README.md  config.py  test_crawler.py
database/: schema.dbml  schema.sql
result/: cube.json  cube_digital.json  全國加油聯名卡.json  吉鶴卡.json  吉鶴卡1.json  微風聯名卡.json  聯邦Line Bank聯名卡.json  聯邦M卡.json  聯邦綠卡.json  聯邦賴點卡.json
tmp/: cube  raw  tmp  全國加油聯名卡  吉鶴卡  微風聯名卡  聯邦Line Bank聯名卡  聯邦M卡  聯邦綠卡  聯邦賴點卡
