[project]
name = "credit-card-rewards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "google-genai>=1.37.0",
    "lxml>=6.0.1",
    "playwright>=1.55.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
